# etherfence

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  hermes.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
crates/etherfence-cli/: Cargo.toml
crates/etherfence-cli/src/: banner.rs  coverage.rs  main.rs  ui.rs  verbose.rs
crates/etherfence-cli/tests/: ci_examples.rs  cli_banner.rs  cli_demo.rs  cli_mcp_policy.rs  cli_mcp_proxy.rs  cli_scan.rs  cli_scan_coverage.rs  cli_setup.rs  cli_setup_baseline.rs  cli_setup_catalog.rs  cli_setup_trust.rs  install_docs.rs  mcp_docs_examples.rs  mcp_operator_guide.rs  setup_catalog_docs.rs
crates/etherfence-core/: Cargo.toml
crates/etherfence-detectors/: Cargo.toml
crates/etherfence-inventory/: Cargo.toml
crates/etherfence-mcp/: Cargo.toml
crates/etherfence-policy/: Cargo.toml
crates/etherfence-report/: Cargo.toml
crates/etherfence-setup/: Cargo.toml
crates/etherfence-setup/src/: baseline.rs  catalog.rs  classification.rs  lib.rs  trust.rs  wizard.rs
crates/etherfence-setup/tests/: wizard_apply.rs
demo/: README.md  etherfence.tape  run-demo.sh  verify-demo.sh
demo/workspace/: .claude.json  project-readonly.toml  request.json
docs/: architecture.md  ci.md  install.md  json-schema.md  mcp-clients.md  mcp-compatibility-matrix.md  mcp-policy-ux.md  mcp-proxy-operator-guide.md  mcp-proxy.md  mcp-real-server-test-template.md  policy.md  release-automation.md  release-checklist.md  roadmap.md  sarif.md  setup-onboarding.md  smoke-test-v0.1.7.md  threat-model.md
docs/examples/: claude-desktop-filesystem-linux.json  cursor-mcp-filesystem-linux.json  mcp-client-generic-linux.json  mcp-client-generic-windows.json  vscode-mcp-filesystem-linux.json
examples/policies/: ci-runner.toml  developer-laptop.toml  mcp-browser-approved-hosts.toml  mcp-filesystem-project-readonly-hardened.toml  mcp-filesystem-project-readonly.toml  mcp-filesystem-readonly.toml  mcp-github-readonly.toml  mcp-github-scoped-orgs.toml  mcp-memory-notes-readonly.toml  mcp-messaging-named-destinations.toml  mcp-minimal-boundary.toml  mcp-readonly-operation-guard.toml  mcp-readonly.toml  mcp-resources-denied.toml  mcp-resources-project-only.toml  mcp-sampling-denied.toml  mcp-strict-method-only.toml  mcp-strict-tools-only.toml  research-workstation.toml  strict.toml
specs/001-agent-catalog-classification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mcp-trust-integrity/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-mcp-integrity-baseline-drift/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-argument-aware-mcp-policy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-guided-secure-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-protection-coverage/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/006-scan-posture-experience/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-scan-posture-stabilization/: data-model.md  (+5 more)
(+94 files in other folders)
