[workspace]
members = [
    "crates/etherfence-cli",
    "crates/etherfence-core",
    "crates/etherfence-inventory",
    "crates/etherfence-detectors",
    "crates/etherfence-mcp",
    "crates/etherfence-policy",
    "crates/etherfence-report",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Etherisys-id/etherfence"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
