[workspace]
members = [
    "crates/etherfence-cli",
    "crates/etherfence-core",
    "crates/etherfence-inventory",
    "crates/etherfence-detectors",
    "crates/etherfence-mcp",
    "crates/etherfence-policy",
    "crates/etherfence-report",
    "crates/etherfence-setup",
]
resolver = "2"

[workspace.package]
version = "1.3.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/Etherisys-id/etherfence"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
same-file = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
regex = "1.10"
