[package]
name = "etherfence-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "etherfence"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
etherfence-core = { path = "../etherfence-core" }
etherfence-detectors = { path = "../etherfence-detectors" }
etherfence-inventory = { path = "../etherfence-inventory" }
etherfence-mcp = { path = "../etherfence-mcp" }
etherfence-policy = { path = "../etherfence-policy" }
etherfence-report = { path = "../etherfence-report" }
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
