[package]
name = "etherfence-setup"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
etherfence-core = { path = "../etherfence-core" }
etherfence-inventory = { path = "../etherfence-inventory" }
etherfence-mcp = { path = "../etherfence-mcp" }
same-file.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
